# hog-pedestrian-detection

./: .gitignore  CMakeLists.txt
header_files/: header.hpp
source_files/: hog_video_controller.cpp  main.cpp
